--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, confusion_matrix, f1_score\n",
+    "from sklearn.metrics import roc_auc_score, confusion_matrix, RocCurveDisplay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b0631cf",
+   "metadata": {},
+   "source": [
+    "Lese inn dataset og droppe kollone for id, da denne ikke inneholder nyttig informasjon for oss."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -37,7 +49,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
@@ -47,6 +58,7 @@
        "      <th>7</th>\n",
        "      <th>8</th>\n",
        "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <th>...</th>\n",
        "      <th>22</th>\n",
        "      <th>23</th>\n",
@@ -63,7 +75,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>842302</td>\n",
        "      <td>M</td>\n",
        "      <td>17.99</td>\n",
        "      <td>10.38</td>\n",
@@ -73,6 +84,7 @@
        "      <td>0.27760</td>\n",
        "      <td>0.3001</td>\n",
        "      <td>0.14710</td>\n",
+       "      <td>0.2419</td>\n",
        "      <td>...</td>\n",
        "      <td>25.38</td>\n",
        "      <td>17.33</td>\n",
@@ -87,7 +99,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>842517</td>\n",
        "      <td>M</td>\n",
        "      <td>20.57</td>\n",
        "      <td>17.77</td>\n",
@@ -97,6 +108,7 @@
        "      <td>0.07864</td>\n",
        "      <td>0.0869</td>\n",
        "      <td>0.07017</td>\n",
+       "      <td>0.1812</td>\n",
        "      <td>...</td>\n",
        "      <td>24.99</td>\n",
        "      <td>23.41</td>\n",
@@ -111,7 +123,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>84300903</td>\n",
        "      <td>M</td>\n",
        "      <td>19.69</td>\n",
        "      <td>21.25</td>\n",
@@ -121,6 +132,7 @@
        "      <td>0.15990</td>\n",
        "      <td>0.1974</td>\n",
        "      <td>0.12790</td>\n",
+       "      <td>0.2069</td>\n",
        "      <td>...</td>\n",
        "      <td>23.57</td>\n",
        "      <td>25.53</td>\n",
@@ -135,7 +147,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>84348301</td>\n",
        "      <td>M</td>\n",
        "      <td>11.42</td>\n",
        "      <td>20.38</td>\n",
@@ -145,6 +156,7 @@
        "      <td>0.28390</td>\n",
        "      <td>0.2414</td>\n",
        "      <td>0.10520</td>\n",
+       "      <td>0.2597</td>\n",
        "      <td>...</td>\n",
        "      <td>14.91</td>\n",
        "      <td>26.50</td>\n",
@@ -159,7 +171,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>84358402</td>\n",
        "      <td>M</td>\n",
        "      <td>20.29</td>\n",
        "      <td>14.34</td>\n",
@@ -169,6 +180,7 @@
        "      <td>0.13280</td>\n",
        "      <td>0.1980</td>\n",
        "      <td>0.10430</td>\n",
+       "      <td>0.1809</td>\n",
        "      <td>...</td>\n",
        "      <td>22.54</td>\n",
        "      <td>16.67</td>\n",
@@ -183,42 +195,79 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         0  1      2      3       4       5        6        7       8   \\\n",
-       "0    842302  M  17.99  10.38  122.80  1001.0  0.11840  0.27760  0.3001   \n",
-       "1    842517  M  20.57  17.77  132.90  1326.0  0.08474  0.07864  0.0869   \n",
-       "2  84300903  M  19.69  21.25  130.00  1203.0  0.10960  0.15990  0.1974   \n",
-       "3  84348301  M  11.42  20.38   77.58   386.1  0.14250  0.28390  0.2414   \n",
-       "4  84358402  M  20.29  14.34  135.10  1297.0  0.10030  0.13280  0.1980   \n",
+       "  1      2      3       4       5        6        7       8        9       10  \\\n",
+       "0  M  17.99  10.38  122.80  1001.0  0.11840  0.27760  0.3001  0.14710  0.2419   \n",
+       "1  M  20.57  17.77  132.90  1326.0  0.08474  0.07864  0.0869  0.07017  0.1812   \n",
+       "2  M  19.69  21.25  130.00  1203.0  0.10960  0.15990  0.1974  0.12790  0.2069   \n",
+       "3  M  11.42  20.38   77.58   386.1  0.14250  0.28390  0.2414  0.10520  0.2597   \n",
+       "4  M  20.29  14.34  135.10  1297.0  0.10030  0.13280  0.1980  0.10430  0.1809   \n",
        "\n",
-       "        9   ...     22     23      24      25      26      27      28      29  \\\n",
-       "0  0.14710  ...  25.38  17.33  184.60  2019.0  0.1622  0.6656  0.7119  0.2654   \n",
-       "1  0.07017  ...  24.99  23.41  158.80  1956.0  0.1238  0.1866  0.2416  0.1860   \n",
-       "2  0.12790  ...  23.57  25.53  152.50  1709.0  0.1444  0.4245  0.4504  0.2430   \n",
-       "3  0.10520  ...  14.91  26.50   98.87   567.7  0.2098  0.8663  0.6869  0.2575   \n",
-       "4  0.10430  ...  22.54  16.67  152.20  1575.0  0.1374  0.2050  0.4000  0.1625   \n",
+       "   ...     22     23      24      25      26      27      28      29      30  \\\n",
+       "0  ...  25.38  17.33  184.60  2019.0  0.1622  0.6656  0.7119  0.2654  0.4601   \n",
+       "1  ...  24.99  23.41  158.80  1956.0  0.1238  0.1866  0.2416  0.1860  0.2750   \n",
+       "2  ...  23.57  25.53  152.50  1709.0  0.1444  0.4245  0.4504  0.2430  0.3613   \n",
+       "3  ...  14.91  26.50   98.87   567.7  0.2098  0.8663  0.6869  0.2575  0.6638   \n",
+       "4  ...  22.54  16.67  152.20  1575.0  0.1374  0.2050  0.4000  0.1625  0.2364   \n",
        "\n",
-       "       30       31  \n",
-       "0  0.4601  0.11890  \n",
-       "1  0.2750  0.08902  \n",
-       "2  0.3613  0.08758  \n",
-       "3  0.6638  0.17300  \n",
-       "4  0.2364  0.07678  \n",
+       "        31  \n",
+       "0  0.11890  \n",
+       "1  0.08902  \n",
+       "2  0.08758  \n",
+       "3  0.17300  \n",
+       "4  0.07678  \n",
        "\n",
-       "[5 rows x 32 columns]"
+       "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../Oblig1/wdbc.data\", header=None)\n",
-    "df.head()"
+    "df = pd.read_csv(\"../Oblig1/wdbc.data\", header=None).drop(0, axis=1)\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e254cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "B    0.625731\n",
+      "M    0.374269\n",
+      "Name: count, dtype: float64\n",
+      "1\n",
+      "B    0.627193\n",
+      "M    0.372807\n",
+      "Name: count, dtype: float64\n",
+      "1\n",
+      "B    0.628319\n",
+      "M    0.371681\n",
+      "Name: count, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame(columns=[\"train\", \"validation\", \"test\"])\n",
+    "train_val = df.groupby(1, group_keys=False)[df.columns].sample(frac=0.8)\n",
+    "test = df.drop(train_val.index)\n",
+    "train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
+    "validation = train_val.drop(data.train.index)    \n",
+    "  \n",
+    "print(train[1].value_counts()/train.shape[0])\n",
+    "print(validation[1].value_counts()/validation.shape[0])\n",
+    "print(test[1].value_counts()/test.shape[0])"
    ]
   }
  ],
@@ -238,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
