--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -16,47 +16,51 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8b0631cf",
-   "metadata": {},
-   "source": [
-    "Lese inn dataset og droppe kollone for id, da denne ikke inneholder nyttig informasjon for oss."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../Oblig1/wdbc.data\", header=None)\n",
-    "df.drop(0, axis=1)\n",
-    "df[1] = np.where(df[1] == \"M\", 1, 0)"
+    "df[\"target\"] = np.where(df[1] == \"M\", 1, 0)\n",
+    "df = df.drop([0,1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a790f4",
+   "metadata": {},
+   "source": [
+    "Først leser vi inn datasetet og ser hvilke verdier vi h. I og konvertere verdiene i target kollonen til 1 for M og 0 for B, slik at disse er på et format som kan brukes senere, vi legger også disse verdiene i en ny kollone slik at vi kan bruke disse  Vi tar også og droppe kollonen for ID-veriden og den gamle kollonen med target verdiene\n",
+    "\n",
+    "\n",
+    "\n",
+    "ref for np.where: https://www.geeksforgeeks.org/numpy/numpy-where-in-python/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 36,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_dataset(data):\n",
-    "    train_val = data.groupby(1, group_keys=False)[data.columns].sample(frac=0.8)\n",
+    "    train_val = data.groupby(\"target\", group_keys=False)[data.columns].sample(frac=0.8)\n",
     "    test = data.drop(train_val.index)\n",
-    "    train = train_val.groupby(1, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
+    "    train = train_val.groupby(\"target\", group_keys=False)[train_val.columns].sample(frac=0.75)\n",
     "    validation = train_val.drop(train.index)    \n",
     "    return [train, validation, test]\n",
     "\n",
     "def check_split_dataset(data):\n",
-    "    print(data[0][1].value_counts()/data[0].shape[0])\n",
-    "    print(data[1][1].value_counts()/data[1].shape[0])\n",
-    "    print(data[2][1].value_counts()/data[2].shape[0])\n",
+    "    print(data[0][\"target\"].value_counts()/data[0].shape[0])\n",
+    "    print(data[1][\"target\"].value_counts()/data[1].shape[0])\n",
+    "    print(data[2][\"target\"].value_counts()/data[2].shape[0])\n",
     "\n",
     "def split_targets_and_features(data):\n",
-    "    targets = data[1]\n",
-    "    features = data.drop(1, axis=1)\n",
+    "    targets = data.target\n",
+    "    features = data.drop(\"target\", axis=1)\n",
     "    return [targets, features]\n",
     "\n",
     "def create_set_of_targets_and_features(data):\n",
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 57,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -111,16 +115,18 @@
       "F1: 1.00\n",
       "ROCAUC: 1.00\n",
       "Validation results:\n",
-      "Accuracy: 0.94\n",
-      "Precision: 0.97\n",
-      "Recall: 0.86\n",
-      "F1: 0.91\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.93\n",
+      "Recall: 0.88\n",
+      "F1: 0.90\n",
       "ROCAUC: 0.92\n"
      ]
     }
    ],
    "source": [
     "dataset = create_full_training_dataset(df)\n",
+    "#data = split_dataset(df)\n",
+    "#check_split_dataset(data)\n",
     "\n",
     "dt1 = DecisionTreeClassifier()\n",
     "dt1.fit(dataset[0][1], dataset[0][0])\n",
@@ -131,11 +137,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "1c82775d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test</th>\n",
+       "      <th>test2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   test  test2\n",
+       "0     1      4\n",
+       "1     2      5\n",
+       "2     3      6"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.DataFrame({\"test\": [1,2,3], \"test2\": [4,5,6]})\n",
+    "df2.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "4cb81442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test</th>\n",
+       "      <th>test2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[17, 18, 19], 16]</td>\n",
+       "      <td>[[22, 23, 24], 18]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 test               test2\n",
+       "0  [[17, 18, 19], 16]  [[22, 23, 24], 18]\n",
+       "1                  16                  18"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.DataFrame({\"test\": df2.test.values + 8, \"test2\": df2.test2.values + 9})\n",
+    "df2.head()"
+   ]
   }
  ],
  "metadata": {
