--- a/Oblig1/manual_classification.ipynb
+++ b/Oblig1/manual_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f4a2c6d6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "8c41a6a9",
    "metadata": {},
    "outputs": [
@@ -61,15 +61,12 @@
    "id": "41268c8c",
    "metadata": {},
    "source": [
-    "Ut ifra hvordan dataene fra training delen ser ut, kan vi prøve å sortere disse på de individuelle kollonene for å se om dette skaper noen naturlige skiller som kan gjøre det mulig for oss å gjennomføre\n",
-    "færre beregninger.\n",
-    "\n",
-    "Ref for iloc[]: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.iloc.html#pandas.DataFrame.iloc"
+    "Ut ifra hvordan dataene fra training delen ser ut, kan vi prøve å sortere disse på de individuelle kollonene for å se om dette skaper noen naturlige skiller som kan gjøre det enklere for oss å gjøre beregningene."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "632f07fa",
    "metadata": {},
    "outputs": [
@@ -102,14 +99,12 @@
    "id": "25bb0638",
    "metadata": {},
    "source": [
-    "Basert på denne grov sorteringen kan det se ut som å sortere datasette basert på verdiene i kollone med index 2 vil gi oss gode skiller. \n",
-    "\n",
-    "Referanse for sort_values(): https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html"
+    "Basert på denne grove sorteringen kan det se ut som å sortere datasette basert på kollone[2] gi oss godt skille vi kan starte med å bruke."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "ae6e1ade",
    "metadata": {},
    "outputs": [
@@ -118,23 +113,23 @@
      "output_type": "stream",
      "text": [
       "    Unnamed: 0    0    1    2    3                4\n",
+      "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
       "0            0  4.4  3.2  1.3  0.2      Iris-setosa\n",
       "2            2  4.6  3.2  1.4  0.2      Iris-setosa\n",
       "3            3  4.4  2.9  1.4  0.2      Iris-setosa\n",
-      "1            1  4.9  3.1  1.5  0.1      Iris-setosa\n",
       "5            5  5.8  2.7  3.9  1.2  Iris-versicolor\n",
       "7            7  5.7  3.0  4.2  1.2  Iris-versicolor\n",
       "6            6  6.1  2.9  4.7  1.4  Iris-versicolor\n",
       "4            4  6.0  2.7  5.1  1.6  Iris-versicolor\n",
-      "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
-      "11          11  6.3  3.4  5.6  2.4   Iris-virginica\n",
       "8            8  6.7  2.5  5.8  1.8   Iris-virginica\n",
-      "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n"
+      "10          10  6.8  3.0  5.5  2.1   Iris-virginica\n",
+      "9            9  6.8  3.2  5.9  2.3   Iris-virginica\n",
+      "11          11  6.3  3.4  5.6  2.4   Iris-virginica\n"
      ]
     }
    ],
    "source": [
-    "print(train.sort_values(\"2\"))"
+    "print(train.sort_values(\"3\"))"
    ]
   },
   {
@@ -142,8 +137,31 @@
    "id": "d36eba1c",
    "metadata": {},
    "source": [
-    "Som vi kan se av sortering basert på verdiene i kolloene med index 2 får vi klare skiller i train datasetet og vi kan derfor prøve å bruke disse naturlige skillene for å gjennomføre\n",
-    "den manuelle klasifikasjonen av datasettet."
+    "Som vi ser av denne sorteringen får vi naturlige gruppering mellom Iris typene og vi har to grenseverdier  som vi kan bruke for å splite datasetet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bcb1cef",
+   "metadata": {},
+   "source": [
+    "$$ Skille1:3,9-\\frac{3,9-1,5}{2} = 2,7 $$\n",
+    "$$ Skille2:5,5-\\frac{5,5-5,1}{2} = 5,3 $$\n",
+    "\n",
+    "$$ H(S) = (-\\frac{1}{3}\\log_{2}(\\frac{1}{3})) + (-\\frac{1}{3}\\log_{2}(\\frac{1}{3})) + (-\\frac{1}{3}\\log_{2}(\\frac{1}{3})) = 0,528 \\times 3 = 1,584 $$\n",
+    "$$ H(S [2] < 5,3) = H(S [2] >= 5,3) = (-\\frac{1}{3}\\log_{2}(\\frac{1}{3})) + (-\\frac{2}{3}\\log_{2}(\\frac{2}{3})) = 0,528 + 0,39 = 0,918 $$\n",
+    "$$ IG(S[2]5,3) = 1,584 - \\frac{2}{3} \\times 0,918 - \\frac{1}{3} \\times 0,918 = 0,666 $$\n",
+    "\n",
+    "$$ H(S [2] < 2,7) = H(S [2] >= 2,7) = (-\\frac{1}{3}\\log_{2}(\\frac{1}{3})) + (-\\frac{2}{3}\\log_{2}(\\frac{2}{3})) = 0,528 + 0,39 = 0,918 $$\n",
+    "$$ IG(S[2]2,7) = 1,584 - \\frac{1}{3} \\times 0,918 - \\frac{2}{3} \\times 0,918 = 0,666 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c1c7432",
+   "metadata": {},
+   "source": [
+    "Som vi ser av disse utregningen så får vi samme IG ved begge av disse grenseverdiene og vi kan derfor bare velge en av disse da det ikke utgjøre noe forskjellig om hvilken av disse som brukes. Jeg velger derfor å splitte på 5,3 i dette tilfellet. Da får vi følgende tree etter denne delingen (se figur_1 i vedlegg ... ). "
    ]
   },
   {
@@ -151,55 +169,67 @@
    "id": "fc02457d",
    "metadata": {},
    "source": [
-    "For å sette opp disse skillene så kan vi bruke ytterpunktene i verdiene for kollonen med index 2 mellom de naturlige skillene."
+    "Som vi ser av treet får vi en helt ren bladnode til høyre i fordeling som kun inneholder \"Iris-virginica\", vi kan derfor se videre på noden til venstre for å vidre dele opp denne.\n",
+    "Hvis vi nå velger å sortere datasetet på kollone[3] så ser vi igjen at vi får et naturlig skille i datasetet som vi kan bruke for å videre splitte opp datasettet."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ff06c091",
+   "id": "3a16e650",
    "metadata": {},
    "source": [
-    "Skille_1: 3,9 - ((3,9 - 1,5) / 2) = 2,7 \n"
+    "$$ Skille3:1,2-\\frac{1,2-0,2}{2} = 0,7 $$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3f5121bf",
+   "id": "e127a0a2",
    "metadata": {},
    "source": [
-    "Skille_2: 5,5 - ((5,5 - 5,1) / 2) = 5,3"
+    "Siden vi kun har to gjennstående iriser å dele opp i, og denne spliten gir oss en ren fordeling i begge de to nye bladnoedene er det ingen behov for å gjøre videre utregninger å vi får dermed alle forekomster av \"Iris-setosa\" i den nye ventre bladnoden og alle forekomster av \"Iris-versicolor\" i den nye høre bladnoden vi vil dermed få følgende tre etter denne oppdelingen (se figur_2 i vedlegg .....). "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c245e5e8",
+   "id": "e3891dcc",
    "metadata": {},
    "source": [
-    "H(S) = (-1/3 log_2(1/3))+(-1/3 log_2(1/3))+(-1/3 log_2(1/3)) = 0,528 * 3 = 1,584"
+    "lag tre her......"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d72095a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Unnamed: 0    0    1    2    3                4\n",
+      "12          12  4.6  3.2  1.4  0.2      Iris-setosa\n",
+      "13          13  5.1  2.5  3.0  1.1  Iris-versicolor\n",
+      "14          14  7.2  3.0  5.8  1.6   Iris-virginica\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6ddd80c5",
+   "id": "b0387757",
    "metadata": {},
    "source": [
-    "Ut i fra sorteringen vi har gjort på dataene i train så ser vi at vi får brøkmessig like splitter ut i fra de skillene vi har satt opp. Alle disse inneholder 1/3 av den totale mengden data i train og vil derfor gi samme oss Information Gain som vist at utregningen under. Det er derfor  "
+    "Når vi bruke dette treet til å fordele verdiene i test delen av datasetet får vi følgende resultater.\n",
+    "Verdi 12 blir først sorter til venstre i den første noden og så videre til venstre igjen som gir en plasering sammen med de andre \"Iris-setosa\" verdiene og derfor riktig resultat.\n",
+    "Verdi 13 blir først sorter til venster i den første noden og så videre til høyre som gir en plassering sammen med de andre \"Iris-versicolor\" verdiene og derfor riktig resultat.\n",
+    "Verdi 14 blir sorter til høyre i den første noden som gir en endelig plassering sammen med de andre \"iris-virginica\" verdiene og derfor riktig resultat.\n",
+    "\n",
+    "Dette gjøre at får en perfekt fordeling test verdiene i datasetet og vi kan si at på de test verdiene vi har tilgjengelig så er denne modellen 100% treffsikker."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6550c8dc",
-   "metadata": {},
-   "source": [
-    "H(S, col_2 < 2,7) = H(S, col_2 >= 2,7 and col_2 < 5,3) = H(S, col_2 >= 5,3) = \n",
-    "(-1/3 log_2(1/3)) + (-2/3 log_2(2/3)) = 0,528 + 0,39 = 0,918"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90d604ee",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
